test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-unmanaged-from-oknil-nil.good
init-field-dflt-nonnil-unmanaged-from-oknil-nil.chpl:8: error: Cannot initialize lhs of non-nilable type 'unmanaged MyClass' from nil
